--- a/rishat_test/templates/item_page.html
+++ b/rishat_test/templates/item_page.html
@@ -15,9 +15,20 @@
           <h5>${{item.price}}</h5>
         </div>
       </div>
-      <form action="{% url 'api:item_buy' pk=item.id %}" method="GET">
-        <button type="submit" id="checkout-button">Buy</button>
-      </form>
+      <button type="button" id="buy-button">Buy</button>
     </section>
   </body>
+  <script type="text/javascript">
+    var stripe = Stripe("{{public_key}}");
+    var buyButton = document.getElementById('buy-button');
+    buyButton.addEventListener('click', function() {
+      fetch("{% url 'api:item_buy' pk=item.id %}", {method: 'GET'})
+      .then(function(response) {
+        return response.json();
+      })
+      .then(function (session) {
+        return stripe.redirectToCheckout({ sessionId: session.id });
+      })
+    });
+  </script>
 </html>
